# cen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5xhxljbr7pb461y27nav05izlp9dqgcn-source
.github/workflows/: release.yml  rust.yml
examples/basic/: main.rs
examples/buffer/: main.rs
examples/compute/: main.rs  shader.comp
examples/egui/: main.rs  shader_a.comp  shader_b.comp
examples/empty/: main.rs
examples/slang/: main.rs  shader.slang
src/: lib.rs
src/app/: app.rs  component.rs  engine.rs  gui.rs  image_resource.rs  mod.rs  resource_store.rs  window.rs
src/graphics/: context.rs  dynamic_image.rs  image_store.rs  mod.rs  pipeline_store.rs  renderer.rs
src/vulkan/: allocator.rs  buffer.rs  command_buffer.rs  compute_pipeline.rs  descriptor_pool.rs  descriptor_set_layout.rs  device.rs  graphics_pipeline.rs  image.rs  instance.rs  memory.rs  mod.rs  pipeline.rs  renderpass.rs  surface.rs  swapchain.rs  window_state.rs
