[package]
name = "cen"
version = "0.0.4"
edition = "2021"
authors = ["Angelo Carly <angelo.carly@protonmail.com"]
description = "Vulkan window backend"
readme = "README.md"
repository = "https://github.com/angelocarly/cen"
license = "MIT"
keywords = ["vulkan", "render", "engine"]
categories = ["rendering::engine"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.30.5"
shaderc = "0.8.3"
log = "0.4.21"
env_logger = "0.11.5"
gpu-allocator = { version = "0.27.0" }
glam = "0.28.0"
bytemuck = { version = "1.17.0", features = ["derive"] }
notify = { version = "6.1.1" }
notify-debouncer-mini = "0.4.1"
slotmap = "1.0.7"
presser = "0.3.1"
egui-ash-renderer = { version = "0.6.0", features = ["gpu-allocator"] }
egui = "0.29.1"

[dev-dependencies]

[[example]]
name = "empty"

[[example]]
name = "compute"

[[example]]
name = "buffer"
