[package]
name = "cen"
version = "0.0.7"
edition = "2021"
authors = ["Lauda Carly <lauda@nel.re>"]
description = "Vulkan window backend"
readme = "README.md"
repository = "https://github.com/n-e-l/cen"
license = "MIT"
keywords = ["vulkan", "render", "engine"]
categories = ["rendering::engine"]

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
winit = "0.30.8"
shaderc = { version = "0.8.3", features = ["build-from-source"] }
log = "0.4.21"
env_logger = "0.11.5"
gpu-allocator = { version = "0.27.0" }
notify = { version = "6.1.1" }
notify-debouncer-mini = "0.4.1"
slotmap = "1.0.7"

# Gui
egui-ash-renderer = { version = "0.9.0", features = ["gpu-allocator", "dynamic-rendering"] }
egui = "0.32.0"
egui-winit = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }

[dev-dependencies]

[[example]]
name = "empty"

[[example]]
name = "compute"

[[example]]
name = "buffer"

[[example]]
name = "egui"
